--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "prettify": "prettier --write \"**/*.js\"",
     "precommit": "lint-staged"
   },
   "lint-staged": {
