--- a/package.json
+++ b/package.json
@@ -9,37 +9,37 @@
     "react-helmet": "^5.2.0",
     "react-scripts": "2.1.8"
   },
+  "devDependencies": {
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5",
+    "prettier": "^1.16.4",
+    "prism-react-renderer": "^0.1.6",
+    "react-prism": "^4.3.2",
+    "stylelint": "^10.0.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettify": "prettier --write \"**/*.js\"",
+    "stylelint": "stylelint --fix '**/*.scss'",
     "precommit": "lint-staged"
   },
   "lint-staged": {
     "*.js": [
       "eslint --fix"
     ],
-    "*.{js,json,scss}": [
+    "*.{js,json}": [
       "prettier --write",
+      "git add"
+    ],
+    "*.scss": [
+      "stylelint '**/*.scss' --fix",
       "git add"
     ]
   },
   "eslintConfig": {
     "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "devDependencies": {
-    "husky": "^1.3.1",
-    "lint-staged": "^8.1.5",
-    "prettier": "^1.16.4",
-    "prism-react-renderer": "^0.1.6",
-    "react-prism": "^4.3.2"
   }
 }
