--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
-    "node-sass": "^4.11.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "node-sass": "^4.12.0",
+    "react": "^16.10.1",
+    "react-dom": "^16.10.1",
     "react-helmet": "^5.2.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "^3.1.2"
   },
   "devDependencies": {
     "husky": "^1.3.1",
