--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react-scripts": "^3.1.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.1.0",
+    "@testing-library/react": "^9.2.0",
+    "expect": "^24.9.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "prettier": "^1.16.4",
@@ -24,7 +27,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test:snpt": "react-scripts test",
     "eject": "react-scripts eject",
     "prettify": "prettier --write \"**/*.js\"",
     "stylelint": "stylelint --fix '**/*.scss'",
