--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
+    "@sentry/browser": "^5.6.3",
     "node-sass": "^4.12.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-ga": "^2.6.0",
     "react-helmet": "^5.2.0",
     "react-scripts": "^3.1.2"
   },
@@ -27,7 +29,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test:snpt": "react-scripts test",
+    "test:snpt": "react-scripts test --watchAll --coverage",
+    "test:snpt:ci": "react-scripts test --watchAll --ci",
     "eject": "react-scripts eject",
     "prettify": "prettier --write \"**/*.js\"",
     "stylelint": "stylelint --fix '**/*.scss'",
