--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "node-sass": "^4.12.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "react-ga": "^2.6.0",
     "react-helmet": "^5.2.0",
     "react-scripts": "^3.1.2"
   },
@@ -30,7 +29,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test:snpt": "react-scripts test --watchAll --coverage",
-    "test:snpt:ci": "react-scripts test --watchAll --ci",
+    "test:snpt:ci": "react-scripts test --no-watch --watch=false --watchAll=false --no-watchman --forceExit",
     "eject": "react-scripts eject",
     "prettify": "prettier --write \"**/*.js\"",
     "stylelint": "stylelint --fix '**/*.scss'",
