Changes: Settings for framework selection

--- a/bundlesize.config.json
+++ b/bundlesize.config.json
@@ -1,7 +1,7 @@
 {
   "files": [
     {
-      "path": "build/**/main-*.js",
+      "path": "build/**/main.*.js",
       "maxSize": "15 kB"
     },
     {
